--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 h1{
-    color: blue;
+    color: black;
+
 }
 h2{
     color: blueviolet;
@@ -12,3 +13,6 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
 }
+*{
+    text-align: center;
+ }
